[package]
name = "green-tools"
version = "0.1.4"
edition = "2021"
authors = ["urlordjames <32751441+urlordjames@users.noreply.github.com>"]
readme = "README.md"
description = "tools to assist with green-updater using green-lib"
license = "GPL-3.0+"

[dependencies]
tokio = { version = "1.28", default-features = false, features = [ "macros", "rt-multi-thread" ] }
green-lib = { git = "https://github.com/urlordjames/green-lib.git", version = "0.6.0" }
serde_json = "1.0"
sha2 = "0.10"
clap = { version = "4.3", features = [ "derive" ] }
url = "2.4"
toml = "0.7"
serde = { version = "1.0", features = [ "derive" ] }
reqwest = { version = "0.11", default-features = false, features = [ "rustls-tls" ] }
async-recursion = "1.0"

[profile.release]
lto = "fat"
